--- a/main.css
+++ b/main.css
@@ -2,11 +2,12 @@
     width: 50px;
     height: 50px;
     background-color:  #bada55;
+    transition-property: width, background-color; /*changes background colour within 2 secs*?/
+    transition-duration: 2s;
     
 }
 
 .box:hover {
-    width: 150px;
-    transition-property: width;
-    transition-duration: 2s;
+   width: 150px;
+   background-color: #e84610; /* red */
 }
